# GroundStateProblem_Eigen3-Spectra

./: CMakeLists.txt  main.cc
